Build: Nova actualização

--- a/apps/projects.html
+++ b/apps/projects.html
@@ -6,13 +6,13 @@
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css' rel='stylesheet'/>
     <link rel="stylesheet" href="../style/estructura.css">
     <link rel="stylesheet" href="../style/proyectos.css">
-    <title>Projects</title>
+    <title> Projectos </title>
 </head>
 <body>
     <nav class="projects-nav">
-        <h2><i class="fa-solid fa-code"></i> Projects</h2>
+        <h2><i class="fa-solid fa-code"></i> Projectos </h2>
         <div class="filters-section">
-            <h3>Filter by Technology</h3>
+            <h3> Filtrar by Tecnologia </h3>
             <div class="filter-options" id="techFilters"></div>
         </div>
         <div class="project-list" id="projectList">
