--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <article class="container">
         <div id="fondo">
             <h1> Isidro Raposo </h1>
-            <img src="src/agustheking.webp" alt="Agustin img">
+            <!-- <img src="src/agustheking.webp" alt="Agustin img"> -->
             <p id="description"> Olá, sou o Isidro Raposo, Engenheiro Informático. Crio soluções digitais com foco no desenvolvimento de aplicações, websites e sistemas de alta performance. </p>
             </div>
 
@@ -22,9 +22,10 @@
             <img src="src/folder-projects.webp" alt="projectos">
             <p> Projectos </p>
         </section>
-        <section class="item cursor-pointer" onclick="openBrowserWindow('mods')">
-            <img src="src/folder-mods.webp" alt="mods">
-            <p>Mods</p>
+        <!-- <section class="item cursor-pointer" onclick="openBrowserWindow('mods')"> -->
+        <section class="item cursor-pointer">
+            <!-- <img src="src/folder-mods.webp" alt="mods">
+            <p>Mods</p> -->
         </section>
         <section class="item cursor-pointer">
             <img src="src/trash.webp" alt="trash">
